# app/Virtual/Models/User.php
@@ -1,0 +1,96 @@
+<?php
+
+namespace App\Virtual\Models;
+
+/**
+ * @OA\Schema(
+ *     title="User",
+ *     description="User model",
+ * )
+ */
+class User
+{
+  /**
+   * @OA\Property(
+   *     title="ID",
+   *     description="ID",
+   *     format="int64",
+   *     example=1
+   * )
+   *
+   * @var integer
+   */
+  private $id;
+
+  /**
+   * @OA\Property(
+   *     title="Name",
+   *     description="Name",
+   * )
+   *
+   * @var string
+   */
+  private $name;
+  /**
+   * @OA\Property(
+   *     title="Email",
+   *     description="Email",
+   *     format="email",
+   * )
+   *
+   * @var string
+   */
+  private $email;
+
+  /**
+   * @OA\Property(
+   *     title="Email verified at",
+   *     description="Email verified at",
+   *     example="2020-01-27 17:50:45",
+   *     format="datetime",
+   *     type="string"
+   * )
+   *
+   * @var \DateTime
+   */
+  private $email_verified_at;
+
+  /**
+   * @OA\Property(
+   *     title="Created at",
+   *     description="Created at",
+   *     example="2020-01-27 17:50:45",
+   *     format="datetime",
+   *     type="string"
+   * )
+   *
+   * @var \DateTime
+   */
+  private $created_at;
+
+  /**
+   * @OA\Property(
+   *     title="Updated at",
+   *     description="Updated at",
+   *     example="2020-01-27 17:50:45",
+   *     format="datetime",
+   *     type="string"
+   * )
+   *
+   * @var \DateTime
+   */
+  private $updated_at;
+
+  /**
+   * @OA\Property(
+   *     title="Deleted at",
+   *     description="Deleted at",
+   *     example="2020-01-27 17:50:45",
+   *     format="datetime",
+   *     type="string"
+   * )
+   *
+   * @var \DateTime
+   */
+  private $deleted_at;
+}
